--- a/profile_clash_time.html
+++ b/profile_clash_time.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Clash With Time : James T Foster Designs</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Overpass:300,800" rel="stylesheet">
