--- a/profile_wilderness_systems.html
+++ b/profile_wilderness_systems.html
@@ -26,7 +26,7 @@
 
 <!-- Content Container -->
 
-  <div id="content">
+  <div class="content">
 
 <!-- Description Section -->
 
@@ -36,16 +36,16 @@
       </p>
     </div>
 
+<!-- Content Close -->
+
+  </div>
+
 <!-- Artwork Section -->
 
-    <div class="gallery">
+  <div class="gallery">
 
-      <img src="./resources/images/detail/wildy_1.png">
-      <img src="./resources/images/detail/wildy_2.png">
-
-    </div>
-
-<!-- Content Close -->
+    <img src="./resources/images/detail/wildy_1.png">
+    <img src="./resources/images/detail/wildy_2.png">
 
   </div>
 
