--- a/profile_women_water.html
+++ b/profile_women_water.html
@@ -26,7 +26,7 @@
 
 <!-- Content Container -->
 
-  <div id="content">
+  <div class="content">
 
 <!-- Description Section -->
 
@@ -36,20 +36,20 @@
       </p>
     </div>
 
+<!-- Content Close -->
+
+  </div>
+
 <!-- Artwork Section -->
 
-    <div class="gallery">
+  <div class="gallery">
 
-      <img src="./resources/images/detail/wow_1.png">
-      <img src="./resources/images/detail/wow_2.png">
-      <img src="./resources/images/detail/wow_3.png">
-      <img src="./resources/images/detail/wow_4.png">
-      <img src="./resources/images/detail/wow_5.png">
-      <img src="./resources/images/detail/wow_6.png">
-
-    </div>
-
-<!-- Content Close -->
+    <img src="./resources/images/detail/wow_1.png">
+    <img src="./resources/images/detail/wow_2.png">
+    <img src="./resources/images/detail/wow_3.png">
+    <img src="./resources/images/detail/wow_4.png">
+    <img src="./resources/images/detail/wow_5.png">
+    <img src="./resources/images/detail/wow_6.png">
 
   </div>
 
