--- a/profile_bigboy.html
+++ b/profile_bigboy.html
@@ -26,7 +26,7 @@
 
 <!-- Content Container -->
 
-  <div id="content">
+  <div class="content">
 
 <!-- Description Section -->
 
@@ -36,19 +36,19 @@
       </p>
     </div>
 
+<!-- Content Close -->
+
+  </div>
+
 <!-- Artwork Section -->
 
-    <div class="gallery">
+  <div class="gallery">
 
-      <img src="./resources/images/detail/bigboy_1.png">
-      <img src="./resources/images/detail/bigboy_2.png">
-      <img src="./resources/images/detail/bigboy_3.png">
-      <img src="./resources/images/detail/bigboy_4.png">
-      <img src="./resources/images/detail/bigboy_5.png">
-
-    </div>
-
-<!-- Content Close -->
+    <img src="./resources/images/detail/bigboy_1.png">
+    <img src="./resources/images/detail/bigboy_2.png">
+    <img src="./resources/images/detail/bigboy_3.png">
+    <img src="./resources/images/detail/bigboy_4.png">
+    <img src="./resources/images/detail/bigboy_5.png">
 
   </div>
 
