--- a/profile_canoe_country.html
+++ b/profile_canoe_country.html
@@ -26,30 +26,30 @@
 
 <!-- Content Container -->
 
-  <div id="content">
+  <div class="content">
 
 <!-- Description Section -->
 
     <div class="description">
       <h1>Profile : Canoe Country Outfitters</h1>
-      <p>Below are the results of a case study to re-imagine the identity of Canoe Country Outfitters, a local canoe/kayak shop in St. Pete. The identity centers around the core elements of a paddler’s backdrop: sun, sky, and water. Through the identity, promoting the ideal conditions the sport can bring you to. The bright, joyous memories the sport can introduce. Alternatively, the shapes which construct the mark reflect the three main vessels sold by the shop: kayaks, paddleboards, and canoes.
+      <p>Below are the results of a case study to re-imagine the identity of Canoe Country Outfitters, a local canoe/kayak shop in St. Pete. The identity centers around the core elements of a paddler&#8217;s backdrop: sun, sky, and water. Through the identity, promoting the ideal conditions the sport can bring you to. The bright, joyous memories the sport can introduce. Alternatively, the shapes which construct the mark reflect the three main vessels sold by the shop: kayaks, paddleboards, and canoes.
       </p>
     </div>
 
+<!-- Content Close -->
+
+  </div>
+
 <!-- Artwork Section -->
 
-    <div class="gallery">
+  <div class="gallery">
 
-      <img src="./resources/images/detail/cco_1.png">
-      <img src="./resources/images/detail/cco_2.png">
-      <img src="./resources/images/detail/cco_3.png">
-      <img src="./resources/images/detail/cco_4.png">
-      <img src="./resources/images/detail/cco_5.png">
-      <img src="./resources/images/detail/cco_6.png">
-
-    </div>
-
-<!-- Content Close -->
+    <img src="./resources/images/detail/cco_1.png">
+    <img src="./resources/images/detail/cco_2.png">
+    <img src="./resources/images/detail/cco_3.png">
+    <img src="./resources/images/detail/cco_4.png">
+    <img src="./resources/images/detail/cco_5.png">
+    <img src="./resources/images/detail/cco_6.png">
 
   </div>
 
