--- a/profile_emw.html
+++ b/profile_emw.html
@@ -26,7 +26,7 @@
 
 <!-- Content Container -->
 
-  <div id="content">
+  <div class="content">
 
 <!-- Description Section -->
 
@@ -36,13 +36,21 @@
       </p>
     </div>
 
+<!-- Content Close -->
+
+  </div>
+
 <!-- Artwork Section -->
 
-    <div class="gallery">
+  <div class="gallery">
 
-      <img src="./resources/images/detail/emw_1.png">
+    <img src="./resources/images/detail/emw_1.png">
 
-    </div>
+  </div>
+
+<!-- Content Container -->
+
+  <div class="content">
 
 <!-- Description Section -->
 
@@ -52,6 +60,10 @@
       </p>
     </div>
 
+<!-- Content Close -->
+
+  </div>
+
 <!-- Artwork Section -->
 
     <div class="gallery">
@@ -59,6 +71,10 @@
       <img src="./resources/images/detail/emw_2.png">
 
     </div>
+
+<!-- Content Container -->
+
+  <div class="content">
 
 <!-- Description Section -->
 
