--- a/profile_emw.html
+++ b/profile_emw.html
@@ -32,7 +32,7 @@
 
     <div class="description">
       <h1>Profile : East Meets West Banners</h1>
-      <p>These posters were designed for the ‘Legends of China’ Silk Banner Competition, then silkscreened onto silk provided by the competition. The overarching themes were peace and ‘East meets West.’ ‘Balance’ took first place in the competition. Both went on a circuit of China’s universities.
+      <p>These posters were designed for the &lsquo;Legends of China&rsquo; Silk Banner Competition, then silkscreened onto silk provided by the competition. The overarching themes were peace and &lsquo;East meets West.&rsquo; &lsquo;Balance&rsquo; took first place in the competition. Both went on a circuit of China&#39;s universities.
       </p>
     </div>
 
