--- a/profile_women_water.html
+++ b/profile_women_water.html
@@ -32,7 +32,7 @@
 
     <div class="description">
       <h1>Profile : Women of Water Apparel</h1>
-      <p>The below work was completed for the brand ‘Women of Water.’ I began by consolidating and streamlining the brand and image. Evolving brand treatment to focus on the core of the business, women and water. Developing a brand which is fashionable, functional, inclusive, and inviting. A beacon for women in the water sports community, a common ground to enact change where needed. <br><br> A portion of the artwork below are designs to be used across the brand. Images for shirts, tank tops, microfibers, hats, stickers, patches, and Buffs. The last image is a sampling of social media posts created while I was managing it.
+      <p>The below work was completed for the brand &lsquo;Women of Water&rsquo;. I began by consolidating and streamlining the brand and image. Evolving brand treatment to focus on the core of the business, women and water. Developing a brand which is fashionable, functional, inclusive, and inviting. A beacon for women in the water sports community, a common ground to enact change where needed. <br><br> A portion of the artwork below are designs to be used across the brand. Images for shirts, tank tops, microfibers, hats, stickers, patches, and Buffs. The last image is a sampling of social media posts created while I was managing it.
       </p>
     </div>
 
