--- a/profile_lullaby.html
+++ b/profile_lullaby.html
@@ -32,7 +32,7 @@
 
     <div class="description">
       <h1>Profile : Lullaby Re-Cover</h1>
-      <p>A case study to re-cover Chuck Palahniuk’s Lullaby. The house draws from a detail introduced in the beginning of the novel, which is threaded subconsciously throughout the novel. As an introduction, the protagonist methodically constructs model houses, then crushes them with his bare feet.<br><br>The contrasting atmospheres, the stark black and white, satirizes the large grey area this book exists in. Likewise, it presents a metaphor for how Lullaby concludes many character arcs throughout the novel. This includes the person whose appearance in Palahniuk’s life sparked the novel, his father’s killer.
+      <p>A case study to re-cover Chuck Palahniuk&#39;s Lullaby. The house draws from a detail introduced in the beginning of the novel, which is threaded subconsciously throughout the novel. As an introduction, the protagonist methodically constructs model houses, then crushes them with his bare feet.<br><br>The contrasting atmospheres, the stark black and white, satirizes the large grey area this book exists in. Likewise, it presents a metaphor for how Lullaby concludes many character arcs throughout the novel. This includes the person whose appearance in Palahniuk&#39;s life sparked the novel, his father&#39;s killer.
       </p>
     </div>
 
