--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
 
-    <img src="./resources/images/logo_monogram.png">
+    <a href="./index.html"><img src="./resources/images/logo_monogram.png"></a>
     <nav>
       <ul>
         <li><a href="./index.html">Work</a></li>
@@ -33,39 +33,50 @@
     <div class="gallery">
 
       <div class="thumbnail">
-        <a href="./profile_women_water.html"><img src="./resources/images/cover/single/wow.png"></a>
+        <a class="cover" href="./profile_women_water.html"><img src="./resources/images/cover/single/wow.png"></a>
+        <div class="cover_title"><h3>Women of Water</h3></div>
       </div>
 
       <div class="thumbnail">
-        <a href="./profile_clash_time.html"><img src="./resources/images/cover/single/clash.png"></a>
+        <a class="cover" href="./profile_clash_time.html">
+          <img src="./resources/images/cover/single/clash.png">
+          <div class="cover_title"><h3>Clash With Time</h3></div>
+        </a>
       </div>
 
       <div class="thumbnail">
-        <a href="./profile_bigboy.html"><img src="./resources/images/cover/single/bigboy.png"></a>
+        <a class="cover" href="./profile_bigboy.html"><img src="./resources/images/cover/single/bigboy.png"></a>
+        <div class="cover_title"><h3>Big Boy</h3></div>
       </div>
 
       <div class="thumbnail">
-          <a href="./profile_mccarthy_accounting.html"><img src="./resources/images/cover/single/mccarthy.png"></a>
+          <a class="cover" href="./profile_mccarthy_accounting.html"><img src="./resources/images/cover/single/mccarthy.png"></a>
+          <div class="cover_title"><h3>McCarthy Accounting</h3></div>
       </div>
 
       <div class="thumbnail">
-        <a href="./profile_emw.html"><img src="./resources/images/cover/single/emw.png"></a>
+        <a class="cover" href="./profile_emw.html"><img src="./resources/images/cover/single/emw.png"></a>
+        <div class="cover_title"><h3>East Meets West</h3></div>
       </div>
 
       <div class="thumbnail">
-        <a href="./profile_canoe_country.html"><img src="./resources/images/cover/single/cco.png"></a>
+        <a class="cover" href="./profile_canoe_country.html"><img src="./resources/images/cover/single/cco.png"></a>
+        <div class="cover_title"><h3>Canoe Country Outfitters</h3></div>
       </div>
 
       <div class="thumbnail">
-        <a href="./profile_lullaby.html"><img src="./resources/images/cover/single/lullaby.png"></a>
+        <a class="cover" href="./profile_lullaby.html"><img src="./resources/images/cover/single/lullaby.png"></a>
+        <div class="cover_title"><h3>Lullaby</h3></div>
       </div>
 
       <div class="thumbnail">
-        <a href="./profile_stpete_chamber.html"><img src="./resources/images/cover/single/stpc.png"></a>
+        <a class="cover" href="./profile_stpete_chamber.html"><img src="./resources/images/cover/single/stpc.png"></a>
+        <div class="cover_title"><h3>St Pete Chamber</h3></div>
       </div>
 
       <div class="thumbnail">
-        <a href="./profile_wilderness_systems.html"><img src="./resources/images/cover/single/wildy.png"></a>
+        <a class="cover" href="./profile_wilderness_systems.html"><img src="./resources/images/cover/single/wildy.png">
+        <div class="cover_title"><h3>Wilderness Systems</h3></div></a>
       </div>
 
     </div>
