--- a/profile_stpete_chamber.html
+++ b/profile_stpete_chamber.html
@@ -13,7 +13,7 @@
 
   <header>
 
-    <img src="./resources/images/logo_monogram.png">
+    <a href="./index.html"><img src="./resources/images/logo_monogram.png"></a>
     <nav>
       <ul>
         <li><a href="./index.html">Work</a></li>
@@ -36,7 +36,7 @@
 
       We are said to be a product of our environment, an organization is no different. Searching through past Chamber identities, I found a common theme: the sun. It has been an integral part of the Chamber identity, because it is an integral element the Florida environment. The new identity I present evolves this theme, rather than abandon it. It presents simplicity, built upon a richly layered foundation. <br><br>
 
-      Two lines of text with a line separating, all that is seen at first glance. Next, one may notice the type is all lowercase. Lowercase is easier to read, each letter form distinct and easily recognized. Lowercase is less intimidating, more approachable; representing the chamber as not a monolith for a select few, but a forum open to all. Following that are the colors. They are bright, yet not blinding as a Florida summer day, cheerful, almost playful. What they are not, is random. In addition to furthering the sentiment of approachability, they are a representation of our environment. Green for the land we reside on, for where the chamber and many businesses are rooted. For vegetation which grows under the sun&#39;s influence, as a business community which flourishes with the chamber. Beige for the beach. A signature attraction for the state; the mediator between ocean and land, as the Chamber can function within the community. Blue for a clear summer sky, or the stunning Gulf water. Lastly, orange for the sun in the sky. A beacon for our day, the Chamber, a beacon for the community. Offering insight for all, a spotlight on those who go beyond, who become integral to a thriving community. <br><br>  
+      Two lines of text with a line separating, all that is seen at first glance. Next, one may notice the type is all lowercase. Lowercase is easier to read, each letter form distinct and easily recognized. Lowercase is less intimidating, more approachable; representing the chamber as not a monolith for a select few, but a forum open to all. Following that are the colors. They are bright, yet not blinding as a Florida summer day, cheerful, almost playful. What they are not, is random. In addition to furthering the sentiment of approachability, they are a representation of our environment. Green for the land we reside on, for where the chamber and many businesses are rooted. For vegetation which grows under the sun&#39;s influence, as a business community which flourishes with the chamber. Beige for the beach. A signature attraction for the state; the mediator between ocean and land, as the Chamber can function within the community. Blue for a clear summer sky, or the stunning Gulf water. Lastly, orange for the sun in the sky. A beacon for our day, the Chamber, a beacon for the community. Offering insight for all, a spotlight on those who go beyond, who become integral to a thriving community. <br><br>
 
       Visually, this identity is concise and thus versatile. It has no reasonable size constraints, and can easily be applied to a range of mediums, adapted in a multitude of ways. Through this submission, I have offered a sampling of variations, including: simplifications, sub-brand examples, possible business cards, and using this rational as a mock memo within the new identity system. <br><br>
 
