--- a/profile_emw.html
+++ b/profile_emw.html
@@ -13,7 +13,7 @@
 
   <header>
 
-    <img src="./resources/images/logo_monogram.png">
+    <a href="./index.html"><img src="./resources/images/logo_monogram.png"></a>
     <nav>
       <ul>
         <li><a href="./index.html">Work</a></li>
