--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>James T Foster Designs</title>
+    <title>James T Foster Designs : Graphic Design / Illustration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="./index.html">Work</a></li>
         <li><a href="./blog.html">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="mailto:jf@jamestfoster.com">Contact</a></li>
       </ul>
     </nav>
 
@@ -33,8 +33,10 @@
     <div class="gallery">
 
       <div class="thumbnail">
-        <a class="cover" href="./profile_women_water.html"><img src="./resources/images/cover/single/wow.png"></a>
-        <div class="cover_title"><h3>Women of Water</h3></div>
+        <a class="cover" href="./profile_women_water.html">
+          <img src="./resources/images/cover/single/wow.png">
+          <div class="cover_title"><h3>Women of Water</h3></div>
+        </a>
       </div>
 
       <div class="thumbnail">
@@ -45,38 +47,52 @@
       </div>
 
       <div class="thumbnail">
-        <a class="cover" href="./profile_bigboy.html"><img src="./resources/images/cover/single/bigboy.png"></a>
-        <div class="cover_title"><h3>Big Boy</h3></div>
+        <a class="cover" href="./profile_bigboy.html">
+          <img src="./resources/images/cover/single/bigboy.png">
+          <div class="cover_title"><h3>Big Boy</h3></div>
+        </a>
       </div>
 
       <div class="thumbnail">
-          <a class="cover" href="./profile_mccarthy_accounting.html"><img src="./resources/images/cover/single/mccarthy.png"></a>
+        <a class="cover" href="./profile_mccarthy_accounting.html">
+          <img src="./resources/images/cover/single/mccarthy.png">
           <div class="cover_title"><h3>McCarthy Accounting</h3></div>
+        </a>
       </div>
 
       <div class="thumbnail">
-        <a class="cover" href="./profile_emw.html"><img src="./resources/images/cover/single/emw.png"></a>
-        <div class="cover_title"><h3>East Meets West</h3></div>
+        <a class="cover" href="./profile_emw.html">
+          <img src="./resources/images/cover/single/emw.png">
+          <div class="cover_title"><h3>East Meets West</h3></div>
+        </a>
       </div>
 
       <div class="thumbnail">
-        <a class="cover" href="./profile_canoe_country.html"><img src="./resources/images/cover/single/cco.png"></a>
-        <div class="cover_title"><h3>Canoe Country Outfitters</h3></div>
+        <a class="cover" href="./profile_canoe_country.html">
+          <img src="./resources/images/cover/single/cco.png">
+          <div class="cover_title"><h3>Canoe Country Outfitters</h3></div>
+        </a>
       </div>
 
       <div class="thumbnail">
-        <a class="cover" href="./profile_lullaby.html"><img src="./resources/images/cover/single/lullaby.png"></a>
-        <div class="cover_title"><h3>Lullaby</h3></div>
+        <a class="cover" href="./profile_lullaby.html">
+          <img src="./resources/images/cover/single/lullaby.png">
+          <div class="cover_title"><h3>Lullaby</h3></div>
+        </a>
       </div>
 
       <div class="thumbnail">
-        <a class="cover" href="./profile_stpete_chamber.html"><img src="./resources/images/cover/single/stpc.png"></a>
-        <div class="cover_title"><h3>St Pete Chamber</h3></div>
+        <a class="cover" href="./profile_stpete_chamber.html">
+          <img src="./resources/images/cover/single/stpc.png">
+          <div class="cover_title"><h3>St Pete Chamber</h3></div>
+        </a>
       </div>
 
       <div class="thumbnail">
-        <a class="cover" href="./profile_wilderness_systems.html"><img src="./resources/images/cover/single/wildy.png">
-        <div class="cover_title"><h3>Wilderness Systems</h3></div></a>
+        <a class="cover" href="./profile_wilderness_systems.html">
+          <img src="./resources/images/cover/single/wildy.png">
+          <div class="cover_title"><h3>Wilderness Systems</h3></div>
+        </a>
       </div>
 
     </div>
