--- a/profile_lullaby.html
+++ b/profile_lullaby.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="./index.html">Work</a></li>
         <li><a href="./blog.html">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="mailto:jf@jamestfoster.com">Contact</a></li>
       </ul>
     </nav>
 
