--- a/blog_posts/blog_grateful_distillation.html
+++ b/blog_posts/blog_grateful_distillation.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Grateful Distillations : James T Foster Designs</title>
+    <meta name ="keywords" content="blog, graphic, design, type, typography, distillation, grateful, dead, branding, logotype,">
+    <meta name ="description" content="Typeface created during identity exploration for Grateful Distillations, a home-grown distillary drawing inspiration from the Grateful Dead.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="../resources/css/style_page.css" type="text/css" rel="stylesheet">
