--- a/blog_posts/blog_halted_movements.html
+++ b/blog_posts/blog_halted_movements.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Halted Movements : James T Foster Designs</title>
+    <meta name ="keywords" content="halted, movements, writing, etching, prints, thesis, illustration, fine art, printmaking, design,">
+    <meta name ="description" content="Fine-Art Printmaking explored for Honors Thesis. The results, a short story and four prints creating through the process of ecthing on copper plates, printed with Chine Colle.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="../resources/css/style_page.css" type="text/css" rel="stylesheet">
