--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>James T Foster Designs : Graphic Design / Illustration</title>
+    <title>James T Foster : Graphic Design / Illustration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./resources/images/icons/favicon_16px.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./resources/images/icons/favicon_32px.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./resources/images/icons/favicon_96px.png" sizes="96x96">
+    <link rel="apple-touch-icon" href="./resources/images/icons/favicon_120px.png">
+    <meta name ="keywords" content="graphic, design, foster, james, illustration, freelance, portfolio, artwork,">
+    <meta name ="description" content="Portfolio website for James T Foster, Freelance Graphic Designer and Illustrator, with examples of previous commissions, case studies, writings, and explorations.">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Overpass:300,800" rel="stylesheet">
