--- a/profile_canoe_country.html
+++ b/profile_canoe_country.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Canoe Country Outfitters : James T Foster Designs</title>
+    <meta name ="keywords" content="profile, graphic, design, logo, branding, identity, advertisement, print, web, social, canoe, country, kayaking, paddling,">
+    <meta name ="description" content="Presentation of case study to re-imagine identity for Canoe Country Outfitters, including brandmark with variations, and application to print advertisements and decals.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
