--- a/profile_lullaby.html
+++ b/profile_lullaby.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Lullaby Re-Cover : James T Foster Designs</title>
+    <meta name ="keywords" content="recover, lullaby, palahniuk, book, cover, design, photography,">
+    <meta name ="description" content="A re-cover exploration for Chuck Palahniuk's Lullaby. Drawing inspiration from the story for the cover photography.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
