--- a/profile_mccarthy_accounting.html
+++ b/profile_mccarthy_accounting.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>McCarthy Accounting : James T Foster Designs</title>
+    <meta name ="keywords" content="mccarthy, accounting, design, branding, logo, identity, website, graphic,">
+    <meta name ="description" content="Identity created for McCarthy Accounting and Taxes, including logomark, colors, letterhead, envelopes, business cards, and website.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
