--- a/profile_stpete_chamber.html
+++ b/profile_stpete_chamber.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>St Pete Chamber : James T Foster Designs</title>
+    <meta name ="keywords" content="st pete, chamber, competition, branding, identity, graphic, design, business, cards, local,">
+    <meta name ="description" content="Bid for re-branding the St Petersburg Chamber of Commerce. Creating the identity and assets accompanying, including letterhead and business cards.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
