--- a/profile_women_water.html
+++ b/profile_women_water.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Women of Water : James T Foster Designs</title>
+    <meta name ="keywords" content="identity, branding, logo, stickers, decals, social, media, graphic, design, illustration,">
+    <meta name ="description" content="Identity refinement and brand expansion for Women of Water apparel. Included t-shirt illustrations, decals, hat patches, and social media management.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
