--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Blog : James T Foster Designs</title>
+    <meta name ="keywords" content="blog, foster, james, graphic, design, writing, illustration,">
+    <meta name ="description" content="Blog for James T Foster, Freelance Graphic Designer and Illustrator. Collection of past works, case studies, musings, explorations, and thought-experiments.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_blog.css" type="text/css" rel="stylesheet">
