--- a/blog_posts/blog_moderation.html
+++ b/blog_posts/blog_moderation.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Thinking in Moderation : James T Foster Designs</title>
+    <meta name ="keywords" content="moderation, poster, graphic, design, thinking, writing, photography,">
+    <meta name ="description" content="A graphic design think piece, contemplating action, condemning procrastination and immobility. Poster showing thinking lost in planning, ruined by the liquids worshipped as fueling creativity.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="../resources/css/style_page.css" type="text/css" rel="stylesheet">
