--- a/profile_bigboy.html
+++ b/profile_bigboy.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Big Boy Restaurant : James T Foster Designs</title>
+    <meta name ="keywords" content="profile, graphic, design, big, boy, restaurant, logo, illustration, diecut, advertisement, magazine, agency, pp+k,">
+    <meta name ="description" content="Collection of work completed while working at PP+K, ad agency based in Tampa, FL, for northern Big Boy Restaurants.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
