--- a/profile_clash_time.html
+++ b/profile_clash_time.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Clash With Time : James T Foster Designs</title>
+    <meta name ="keywords" content="clash, time, max, roach, james, foster, graphic, design, vinyl, ep, compilation, packaging, jazz,">
+    <meta name ="description" content="Case study to create compilation album for Jazz drummer Max Roach. Drawing from his crash cymbol solo and iconic look to create artwork.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
