--- a/profile_emw.html
+++ b/profile_emw.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>East Meets West : James T Foster Designs</title>
+    <meta name ="keywords" content="east, meets, west, china, poster, banner, silkscreen, competition, illustration,">
+    <meta name ="description" content="Hand silkscreened posters designed and printed for the Legend in Silk competition in Bejing. Representing the University of South Florida St Petersburg Campus. Poster called Balance won first place in the competition.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
