--- a/profile_wilderness_systems.html
+++ b/profile_wilderness_systems.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>St Pete Chamber : James T Foster Designs</title>
+    <title>Wilderness Systems Posters : James T Foster Designs</title>
+    <meta name ="keywords" content="wilderness, systems, poster, graphic, design, illustration, kayak, fishing, technical, blueprint,">
+    <meta name ="description" content="Series of Point-of-Purchase posters created to display features of Wilderness Systems' premier fishing kayaks. Technical illustrations inspired by blueprints.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
