Added HM Story.

--- a/blog_posts/blog_halted_movements.html
+++ b/blog_posts/blog_halted_movements.html
@@ -38,6 +38,8 @@
 
       This project consists of two parts: a written narrative and four etching prints. The imagery developed in the prose was interpreted into the process of printmaking. The prints were created through the process of etching and printing copper plates, with the compliment of chine-colle (printing on top of a decorative, handmade paper, which is simultaneously adhered to the base paper). <br><br>
 
+      The story which inspired/accompanied the prints can be found here: <a href="./blog_hm_story.html" target="_blank">Halted Movements</a> <br><br>
+
       Image Area: 12&#34; x 18&#34;
       </p>
     </div>
