--- a/index.html
+++ b/index.html
@@ -38,63 +38,63 @@
 
     <div class="gallery">
 
-      <div class="thumbnail">
-        <a class="cover" href="./profile_women_water.html">
+      <div class="thumbnail" id="women_of_water">
+        <a href="./profile_women_water.html">
           <img src="./resources/images/cover/single/wow.png">
           <div class="cover_title"><h3>Women of Water</h3></div>
         </a>
       </div>
 
-      <div class="thumbnail">
+      <div class="thumbnail" id="clash_time">
         <a class="cover" href="./profile_clash_time.html">
           <img src="./resources/images/cover/single/clash.png">
           <div class="cover_title"><h3>Clash With Time</h3></div>
         </a>
       </div>
 
-      <div class="thumbnail">
+      <div class="thumbnail" id="bigboy">
         <a class="cover" href="./profile_bigboy.html">
           <img src="./resources/images/cover/single/bigboy.png">
           <div class="cover_title"><h3>Big Boy</h3></div>
         </a>
       </div>
 
-      <div class="thumbnail">
+      <div class="thumbnail" id="mccarthy">
         <a class="cover" href="./profile_mccarthy_accounting.html">
           <img src="./resources/images/cover/single/mccarthy.png">
           <div class="cover_title"><h3>McCarthy Accounting</h3></div>
         </a>
       </div>
 
-      <div class="thumbnail">
+      <div class="thumbnail" id="emw">
         <a class="cover" href="./profile_emw.html">
           <img src="./resources/images/cover/single/emw.png">
           <div class="cover_title"><h3>East Meets West</h3></div>
         </a>
       </div>
 
-      <div class="thumbnail">
+      <div class="thumbnail" id="cco">
         <a class="cover" href="./profile_canoe_country.html">
           <img src="./resources/images/cover/single/cco.png">
           <div class="cover_title"><h3>Canoe Country Outfitters</h3></div>
         </a>
       </div>
 
-      <div class="thumbnail">
+      <div class="thumbnail" id="lullaby">
         <a class="cover" href="./profile_lullaby.html">
           <img src="./resources/images/cover/single/lullaby.png">
           <div class="cover_title"><h3>Lullaby</h3></div>
         </a>
       </div>
 
-      <div class="thumbnail">
+      <div class="thumbnail" id="stpc">
         <a class="cover" href="./profile_stpete_chamber.html">
           <img src="./resources/images/cover/single/stpc.png">
           <div class="cover_title"><h3>St Pete Chamber</h3></div>
         </a>
       </div>
 
-      <div class="thumbnail">
+      <div class="thumbnail" id="wilderness">
         <a class="cover" href="./profile_wilderness_systems.html">
           <img src="./resources/images/cover/single/wildy.png">
           <div class="cover_title"><h3>Wilderness Systems</h3></div>
