--- a/profile_mccarthy_accounting.html
+++ b/profile_mccarthy_accounting.html
@@ -34,7 +34,7 @@
 
     <div class="description">
       <h1>Profile : McCarthy Accounting &amp; Taxes</h1>
-      <p>Below is the identity completed for the Pinellas Park-based accounting firm McCarthy Accounting and Taxes. The firm came under new ownership, who wanted to revitalize their appearance to accompany the change. The project included application to all the necessary collateral of business, such as business cards, letterhead, envelopes, and a website.<br><br> The screen-captures are taken from the live website, found here: <a href="http://mccarthyaccounting.us/" target="_blank">mccarthyaccounting.us</a>
+      <p>Below is the identity completed for the Pinellas Park-based accounting firm McCarthy Accounting and Taxes. The firm came under new ownership, who wanted to revitalize their appearance to accompany the change. The project included application to all necessary collateral of conducting business, such as business cards, letterhead, envelopes, and website.<br><br> The website the screen-capture is taken from, can be found here: <a href="http://mccarthyaccounting.us/" target="_blank">mccarthyaccounting.us</a>
       </p>
     </div>
 
@@ -49,6 +49,7 @@
     <img src="./resources/images/detail/mccarthy_1.png">
     <img src="./resources/images/detail/mccarthy_2.png">
     <img src="./resources/images/detail/mccarthy_3.png">
+    <a href="http://mccarthyaccounting.us" target="_blank"><img src="./resources/images/detail/mccarthy_4.png"></a>
 
   </div>
 
