--- a/blog.html
+++ b/blog.html
@@ -64,6 +64,16 @@
         </a>
       </div>
 
+      <div class="thumbnail">
+        <a class="cover" href="./blog_posts/blog_lullaby.html" target="_blank">
+          <img src="./resources/images/cover/blog/lullaby.png">
+          <div class="cover_title">
+            <h1>Lullaby Re-Cover</h1>
+            <p>A case study to re-cover Chuck Palahniuk&#39;s Lullaby. The house draws...</p>
+          </div>
+        </a>
+      </div>
+
     </div>
 
 <!-- Content Close -->
