--- a/blog_posts/blog_halted_movements.html
+++ b/blog_posts/blog_halted_movements.html
@@ -15,7 +15,7 @@
 
   <header>
 
-    <a href="./index.html"><img src="../resources/images/logo_monogram.png"></a>
+    <a href="../index.html"><img src="../resources/images/logo_monogram.png"></a>
     <nav>
       <ul>
         <li><a href="../index.html">Work</a></li>
