--- a/blog_posts/blog_moderation.html
+++ b/blog_posts/blog_moderation.html
@@ -15,7 +15,7 @@
 
   <header>
 
-    <a href="./index.html"><img src="../resources/images/logo_monogram.png"></a>
+    <a href="../index.html"><img src="../resources/images/logo_monogram.png"></a>
     <nav>
       <ul>
         <li><a href="../index.html">Work</a></li>
@@ -34,7 +34,7 @@
 
     <div class="description">
       <h1>Blog : Thinking in Moderation</h1>
-      <p>College students have found a new buzz word to hide their tendency of postponement; thinking is now synonymous with procrastination. Thinking is often used as a cover to hide the fact that little to no time has been spent actually thinking about the project. It sounds good, but that is about it. It isn&#39;t coincidental that many times projects come together under the influence of a pressing deadline. It&#39;s when the project can no longer be put off, one has to make a decision and go with it, hoping that it doesn&#39;t lead them down a dead-end. The process of doing something and moving forward does more for thinking than any amount of screen starring. Often, the original sketches are tossed, but they began the process that leads to a solution.<br><br>
+      <p class="long_form">College students have found a new buzz word to hide their tendency of postponement; thinking is now synonymous with procrastination. Thinking is often used as a cover to hide the fact that little to no time has been spent actually thinking about the project. It sounds good, but that is about it. It isn&#39;t coincidental that many times projects come together under the influence of a pressing deadline. It&#39;s when the project can no longer be put off, one has to make a decision and go with it, hoping that it doesn&#39;t lead them down a dead-end. The process of doing something and moving forward does more for thinking than any amount of screen starring. Often, the original sketches are tossed, but they began the process that leads to a solution.<br><br>
 
       Like caffeine, thinking is a drug which many students often indulge in heavily. With both, moderation is the key to gaining the best effects. Too little thinking will leave one&#39;s work static and unoriginal, rehashing the same ideas over and over again with no innovative changes. Too much will leave the user a quivering mess with nothing of concrete proof to show for the hours of time spent in hyper speed.<br><br>
 
