--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         </a>
       </div>
 
-      <div class="thumbnail" id="clash_time">
-        <a class="cover" href="./profile_clash_time.html">
-          <img src="./resources/images/cover/single/clash.png">
-          <div class="cover_title"><h3>Clash With Time</h3></div>
+      <div class="thumbnail" id="mccarthy">
+        <a class="cover" href="./profile_mccarthy_accounting.html">
+          <img src="./resources/images/cover/single/mccarthy.png">
+          <div class="cover_title"><h3>McCarthy Accounting</h3></div>
         </a>
       </div>
 
@@ -59,10 +59,10 @@
         </a>
       </div>
 
-      <div class="thumbnail" id="mccarthy">
-        <a class="cover" href="./profile_mccarthy_accounting.html">
-          <img src="./resources/images/cover/single/mccarthy.png">
-          <div class="cover_title"><h3>McCarthy Accounting</h3></div>
+      <div class="thumbnail" id="aloha">
+        <a class="cover" href="./profile_aloha.html">
+          <img src="./resources/images/cover/single/aloha.png">
+          <div class="cover_title"><h3>Aloha Paddle Company</h3></div>
         </a>
       </div>
 
@@ -80,10 +80,10 @@
         </a>
       </div>
 
-      <div class="thumbnail" id="lullaby">
-        <a class="cover" href="./profile_lullaby.html">
-          <img src="./resources/images/cover/single/lullaby.png">
-          <div class="cover_title"><h3>Lullaby</h3></div>
+      <div class="thumbnail" id="clash_time">
+        <a class="cover" href="./profile_clash_time.html">
+          <img src="./resources/images/cover/single/clash.png">
+          <div class="cover_title"><h3>Clash With Time</h3></div>
         </a>
       </div>
 
