--- a/profile_aloha.html
+++ b/profile_aloha.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lullaby Re-Cover : James T Foster Designs</title>
-    <meta name ="keywords" content="recover, lullaby, palahniuk, book, cover, design, photography,">
-    <meta name ="description" content="A re-cover exploration for Chuck Palahniuk's Lullaby. Drawing inspiration from the story for the cover photography.">
+    <title>Aloha Paddle Company : James T Foster Designs</title>
+    <meta name ="keywords" content="profile, graphic, design, aloha, paddle, company, logo, illustration, identity, branding, apparel,">
+    <meta name ="description" content="The identity created for Aloha Paddle Company in St Petersburg, FL. ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_page.css" type="text/css" rel="stylesheet">
@@ -33,8 +33,8 @@
 <!-- Description Section -->
 
     <div class="description">
-      <h1>Profile : Lullaby Re-Cover</h1>
-      <p>A case study to re-cover Chuck Palahniuk&#39;s Lullaby. The house draws from a detail introduced in the beginning of the novel, which is threaded subconsciously throughout the novel. As an introduction, the protagonist methodically constructs model houses, then crushes them with his bare feet.<br><br>The contrasting atmospheres, the stark black and white, satirizes the large grey area this book exists in. Likewise, it presents a metaphor for how Lullaby concludes many character arcs throughout the novel. This includes the person whose appearance in Palahniuk&#39;s life sparked the novel, his father&#39;s killer.
+      <h1>Profile : Aloha Paddle Company</h1>
+      <p>Below are the assets created for the Aloha Paddle Company, based in St. Petersburg, Fl. The company wanted for foster a friendly vibe, a welcoming place for paddlers of all experience to discover and share their passion for all aspects of stand-up paddleboarding, whether flatwater, surf, or touring. A place to share knowledge and experience.
       </p>
     </div>
 
@@ -46,7 +46,11 @@
 
   <div class="gallery">
 
-    <img src="./resources/images/detail/lullaby_1.png">
+    <img src="./resources/images/detail/aloha_1.png">
+    <img src="./resources/images/detail/aloha_2.png">
+    <img src="./resources/images/detail/aloha_3.png">
+    <img src="./resources/images/detail/aloha_4.png">
+    <img src="./resources/images/detail/aloha_5.png">
 
   </div>
 
