--- a/blog_posts/blog_lullaby.html
+++ b/blog_posts/blog_lullaby.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Grateful Distillations : James T Foster Designs</title>
-    <meta name ="keywords" content="blog, graphic, design, type, typography, distillation, grateful, dead, branding, logotype,">
-    <meta name ="description" content="Typeface created during identity exploration for Grateful Distillations, a home-grown distillary drawing inspiration from the Grateful Dead.">
+    <title>Lullaby Re-Cover : James T Foster Designs</title>
+    <meta name ="keywords" content="recover, lullaby, palahniuk, book, cover, design, photography,">
+    <meta name ="description" content="A re-cover exploration for Chuck Palahniuk's Lullaby. Drawing inspiration from the story for the cover photography.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="../resources/css/style_page.css" type="text/css" rel="stylesheet">
@@ -33,8 +33,8 @@
 <!-- Description Section -->
 
     <div class="description">
-      <h1>Blog : Grateful Distillations</h1>
-      <p>This exploration was in the service of a micro-distillary. The initial inspiration was concert posters from jam bands such as The Grateful Dead. I distilled a common negative space motive from the type treatments, and blended it with the shape of a beaker. The result is the hand-crafted monospace typeface below.
+      <h1>Blog : Lullaby Re-Cover</h1>
+      <p>A case study to re-cover Chuck Palahniuk&#39;s Lullaby. The house draws from a detail introduced in the beginning of the novel, which is threaded subconsciously throughout the novel. As an introduction, the protagonist methodically constructs model houses, then crushes them with his bare feet.<br><br>The contrasting atmospheres, the stark black and white, satirizes the large grey area this book exists in. Likewise, it presents a metaphor for how Lullaby concludes many character arcs throughout the novel. This includes the person whose appearance in Palahniuk&#39;s life sparked the novel, his father&#39;s killer.
       </p>
     </div>
 
@@ -46,8 +46,7 @@
 
   <div class="gallery">
 
-    <img src="../resources/images/detail/distillation_1.png">
-    <img src="../resources/images/detail/distillation_2.png">
+    <img src="../resources/images/detail/lullaby_1.png">
 
   </div>
 
