--- a/profile_canoe_country.html
+++ b/profile_canoe_country.html
@@ -34,7 +34,9 @@
 
     <div class="description">
       <h1>Profile : Canoe Country Outfitters</h1>
-      <p>Below are the results of a case study to re-imagine the identity of Canoe Country Outfitters, a local canoe/kayak shop in St. Pete. The identity centers around the core elements of a paddler&#8217;s backdrop: sun, sky, and water. Through the identity, promoting the ideal conditions the sport can bring you to. The bright, joyous memories the sport can introduce. Alternatively, the shapes which construct the mark reflect the three main vessels sold by the shop: kayaks, paddleboards, and canoes.
+      <p>Below are the results of a case study to re-imagine the identity of Canoe Country Outfitters, a local canoe/kayak shop in St. Petersburg, FL. The identity centers around the core elements of a paddler&#8217;s backdrop: sun, sky, and water. Through the identity, promoting the ideal conditions the sport can bring you to. The bright, joyous memories the sport can introduce. Alternatively, the shapes which construct the mark reflect the three main vessels sold by the shop: kayaks, paddleboards, and canoes. <br><br>
+
+      All advertisements shown below are real ads designed for the shop, and run in local print publications, shown here with the re-invisioned identity.
       </p>
     </div>
 
@@ -52,6 +54,8 @@
     <img src="./resources/images/detail/cco_4.png">
     <img src="./resources/images/detail/cco_5.png">
     <img src="./resources/images/detail/cco_6.png">
+    <img src="./resources/images/detail/cco_7.png">
+    <img src="./resources/images/detail/cco_8.png">
 
   </div>
 
