Blog, Jalopy Jones.

--- a/blog.html
+++ b/blog.html
@@ -35,6 +35,16 @@
     <div class="gallery">
 
       <div class="thumbnail">
+        <a class="cover" href="./blog_posts/blog_jalopy_jones.html" target="_blank">
+          <img src="./resources/images/cover/blog/jalopy.png">
+          <div class="cover_title">
+            <h1>Jalopy Jones</h1>
+            <p>Jalopy Jones is the latest musician changing the concept of an album...</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="thumbnail">
         <a class="cover" href="./blog_posts/blog_grateful_distillation.html" target="_blank">
           <img src="./resources/images/cover/blog/grateful_distill.png">
           <div class="cover_title">
