--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html>
   <head>
     <title>James T Foster : Graphic Design / Illustration</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./resources/images/icons/favicon_16px.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="./resources/images/icons/favicon_32px.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="./resources/images/icons/favicon_96px.png" sizes="96x96">
+
+    <link rel='shortcut icon' type='image/x-icon' href='./resources/images/icons/favicon_120px.png' />
     <link rel="apple-touch-icon" href="./resources/images/icons/favicon_120px.png">
-    <meta name ="keywords" content="graphic, design, foster, james, illustration, freelance, portfolio, artwork,">
+
     <meta name ="description" content="Portfolio website for James T Foster, Freelance Graphic Designer and Illustrator, with examples of previous commissions, case studies, writings, and explorations.">
+
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Overpass:300,800" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Overpass:300,800" rel="stylesheet">
+
   </head>
   <body>
 
@@ -39,9 +42,9 @@
     <div class="gallery">
 
       <div class="thumbnail" id="women_of_water">
-        <a href="./profile_women_water.html">
+        <a class="cover" href="./profile_women_water.html">
           <img src="./resources/images/cover/single/wow.png">
-          <div class="cover_title"><h3>Women of Water</h3></div>
+          <h3>Women of Water</h3>
         </a>
       </div>
 
