Add Blog - Barbato.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,15 @@
 
   <footer>
 
-    <h2>Let's Collaborate:  <a href="mailto:jf@jamestfoster.com">jf@jamestfoster.com</a></h2>
+    <h2>Hello!</h2>
+
+    <p>I&#39;m James Foster, a Freelance Graphic Designer based out of St Petersburg, Florida.</p>
+
+    <p>I believe in vertical integration, working with clients through every step of the process, from ideation, through creation, to implementation. I offer a variety of services, including: Brand/Identity Creation (and all collateral associated with), Print/Web Advertisements, Websites, and Social Media Management.</p>
+
+    <p>Above are examples of past projects completed. Please visit my <a href="./blog.html">blog</a> for further examples of work, or visit my social media accounts linked below.</p>
+
+    <h2 id="email">Let's Collaborate:  <a href="mailto:jf@jamestfoster.com">jf@jamestfoster.com</a></h2>
 
     <div id="social">
       <a href="https://www.behance.net/jamestfoster" target="_blank"><img src="./resources/images/icons/behance.png"></a>
