--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta name ="description" content="Blog for James T Foster, Freelance Graphic Designer and Illustrator. Collection of past works, case studies, musings, explorations, and thought-experiments.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style_blog.css" type="text/css" rel="stylesheet">
 
@@ -37,6 +37,16 @@
   <!-- Artwork Section -->
 
     <div class="gallery">
+
+      <div class="thumbnail">
+        <a class="cover" href="./blog_posts/blog_barbatos.html" target="_blank">
+          <img src="./resources/images/cover/blog/barbatos.png">
+          <div class="cover_title">
+            <h1>Barbato&#39;s Service Center</h1>
+            <p>A simple landing page site for...</p>
+          </div>
+        </a>
+      </div>
 
       <div class="thumbnail">
         <a class="cover" href="./blog_posts/blog_jalopy_jones.html" target="_blank">
