--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
           <img src="./resources/images/cover/blog/barbatos.png">
           <div class="cover_title">
             <h1>Barbato&#39;s Service Center</h1>
-            <p>A simple landing page site for...</p>
+            <p>A simple landing page site.</p>
           </div>
         </a>
       </div>
